@@ -118,3 +118,6 @@ REL1_10_7:
 - Added 'StubManager' extension
 - Fixed small bug (non core, just when Special:Version is viewed in a particular case) in RawRight
 - Added 'EmailLog' extension
+- Added 'UserSettingsChanged' hook in User.php (used for logging functionality)
+- Adjusted 'Log/emaillog' browse right for '*' group
+-
